packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/relations/prisma/schema/schema1.prisma
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["prismaSchemaFolder"]
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model User {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  name      String?
  email     String    @unique
  date      DateTime?
  // missing Link[]
}